--- a/playbooks/roles/nginx/templates/site1.lan.conf
+++ b/playbooks/roles/nginx/templates/site1.lan.conf
@@ -10,7 +10,7 @@ server {
 
     location ~ .php$ {
         include /etc/nginx/fastcgi_params;
-        fastcgi_pass  127.0.0.1:{{ cgi_port }};
+        fastcgi_pass  unix:/run/php/php7.4-fpm.sock;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME {{ root }}/{{ hostname_1 }}$fastcgi_script_name;
     }
